--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,14 @@
+on:
+  push:
+    branches:
+      -master
 
+
+jobes:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "printing path"
+        run: pwd
+      - name: "printing name"
+        run: echo mohamed
