--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,7 @@ jobs:
         run: echo mohamed
 
       - uses: actions/checkout@v3 
+      - name: "docker login"
+        run: docker login --username ${{ secrets.DOCKER_USERNAME}} --password ${{ secrets.DOCKER_PASSWORD}}
       - name: "printing fils"
         run: ls
