--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,11 @@ jobs:
 
       - uses: actions/checkout@v3 
       - name: "docker login"
-        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
+        run: docker login --username ${{ secrets.DOCKER_USERNAME}} --password ${{ secrets.DOCKER_PASSWORD}}
       
+      - name: "buildin image"
+        run: docker build -t ${{ secrets.DOCKER_USERNAME}}/os .
+
+
+      - name: "push to dockerhub"
+        run: docker push ${{ secrets.DOCKER_USERNAME}}/os
